<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/btnLogout"
        android:icon="@drawable/ic_baseline_logout_24"
        android:title="@string/logout"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/btnChangeLang"
        android:icon="@drawable/ic_baseline_language_24"
        android:title="@string/langguage"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/btnSeeMap"
        android:icon="@drawable/baseline_map_24"
        android:title="Maps"
        app:showAsAction="ifRoom"/>
</menu>